--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GoodInc</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="null.css">
+    <link rel="stylesheet" type="text/css" href="font.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 </head>
 <body>
@@ -16,6 +17,15 @@
         </section>
     </header>
     <nav>
+        <div>
+            <div>
+                    <a href="">Portfolio<span class="border"></span></a>
+                    <a href="">Portfolio<span class="border"></span></a>
+                    <a href="">Portfolio<span class="border"></span></a>
+                    <a href="">Portfolio<span class="border"></span></a>
+                    <a href="">Portfolio</a>
+            </div>
+        </div>
     </nav>
     <main>
         <section class="social">
@@ -45,16 +55,19 @@
         </section>
         <section class="blocks">
             <article>
+                <span class="blocktriangle"><span>+</span></span>
                 <img src="img/block1.png" alt="kek">
                 <h1>Taste & Sounds from Thailand</h1>
                 <p>We've made some small changes to BlazRobar.Com</p>
             </article>
             <article>
+                <span class="blocktriangle"><span>+</span></span>
                 <img src="img/block3.png" alt="kek">
                 <h1>Taste & Sounds from Thailand</h1>
                 <p>We've made some small changes to BlazRobar.Com</p>
             </article>
             <article>
+                <span class="blocktriangle"><span>+</span></span>
                 <img src="img/block2.png" alt="kek">
                 <h1>Taste & Sounds from Thailand</h1>
                 <p>We've made some small changes to BlazRobar.Com</p>
@@ -62,32 +75,149 @@
         </section>
         <section class="news">
             <article class="left">
-                <article class="full_box"></article>
-                <article class="full_box_selected"></article>
-                <article class="medium_box"></article>
-                <article class="small_box"></article>
-                <article class="small_box"></article>
-                <article class="small_box"></article>
-                <article class="small_box"></article>
+                <article class="full_box">
+                    <h1>Good Inc. Good Choice.</h1>
+                    <div>
+                        <a class="border" href="">14th January</a>
+                        <a class="border" href="">32 Comments</a>
+                        <a class="stars" href=""></a>
+                        <a href="">124 Votes</a>
+                    </div>
+                    <p>
+                        I believe that if life gives you lemons, you should make lemonade... 
+                        And try to find somebody whose life has given them vodka, and have a party. 
+                    </p>
+                </article>
+                <article class="full_box_selected">
+                    <h1>Behind every great man is a woman rolling</h1>
+                    <div>
+                        <a class="border" href="">13th January</a>
+                        <a class="border" href="">312 Comments</a>
+                        <a class="stars" href=""></a>
+                        <a href="">1254 Votes</a>
+                    </div>
+                    <p>
+                        Quisque accumsan eleifend dolor, nec bibendum nibh ultricies at. 
+                        Nunc convallis risus sit amet augue bibendum non lobortis eros interdum. 
+                        Maecenas quis risus 
+                    </p>
+                </article>
+                <article class="medium_box">
+                    <h1>A day without sunshine is like, you know, night.</h1>
+                    <div class="date"><a class="border" href="">13th January 2013</a><a href="">312 Comments</a></div>
+                </article>
+                <article class="small_box">
+                    <h1>Get your facts first, then you can distort them as you please</h1>
+                    <div class="date"><a class="border" href="">13th January 2013</a><a href="">312 Comments</a></div>
+                </article>
+                <article class="small_box">
+                    <h1>Get your facts first, then you can distort them as you please</h1>
+                    <div class="date"><a class="border" href="">13th January 2013</a><a href="">312 Comments</a></div>
+                </article>
+                <article class="small_box">
+                    <h1>Get your facts first, then you can distort them as you please</h1>
+                    <div class="date"><a class="border" href="">13th January 2013</a><a href="">312 Comments</a></div>
+                </article>
+                <article class="small_box">
+                    <h1>Get your facts first, then you can distort them as you please</h1>
+                    <div class="date"><a class="border" href="">13th January 2013</a><a href="">312 Comments</a></div>
+                </article>
                 <article class="read_more">
+                    <a href="">Read more</a>
+                    <a href=""><img src="img/plus.png" alt=""></a>
+                </article>
+                <article class="text_boxage">
+                    <div>
+                        <h1>Nice text boxage here</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Donec eu turpis purus. Pellentesque ullamcorper mauris vitae sapien bibendum tincidunt.
+                            <br> <br> 
+                            Morbi malesuada mauris sed nibh placerat sit amet posuere libero egestas. 
+                            Vestibulum consectetur iaculis est, at dapibus purus malesuada vitae. 
+                            Mauris sollicitudin aliquam scelerisque. 
+                            Vestibulum ante <span>ipsum primis in faucibus orci</span> luctus et ultrices posuere cubilia Curae; 
+                            Donec et mi sem. 
+                            Duis tristique elementum tristique. 
+                            Sed ac magna quis erat sagittis suscipit. 
+                            Phasellus faucibus rhoncus massa, non laoreet lorem fringilla non.
+                        </p>
+                    </div>
+                    <div>
+                        <p>19th April</p>
+                        <p>23 <img src="img/heart.png" alt="heart"></p>
+                    </div>
+                </article>
+                <article class="imgboxage">
+                    <img src="img/imgboxage.png" alt="">
+                    <h1>I like long walks, especially when they are taken by people who really annoy me.</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu turpis purus. Pellentesque ullamcorper mauris vitae sapien bibendum tincidunt. 
+                        Morbi malesuada mauris sed nibh placerat sit amet posuere libero egestas. Vestibulum consectetur iaculis est, at dapibus purus malesuada vitae. Mauris smassa, non laoreet lorem fringilla non.
+                    </p>
+                </article>
+                <article class="simpleboxage">
+                    <h1>A slightly different text box</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Donec eu turpis purus. Pellentesque ullamcorper mauris vitae sapien bibendum tincidunt. 
+                        Check leo dignissim + 
+                        <br> <br>
+                        Morbi malesuada mauris sed nibh placerat sit amet posuere libero egestas. Vestibulum consectetur iaculis est, at dapibus purus malesuada vitae. Mauris sollicitudin aliquam scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec et mi sem. Duis tristique elementum tristique. Sed ac magna quis erat sagittis suscipit. Phasellus faucibus rhoncus massa, non laoreet lorem fringilla non.
+                        <br> <br> Mauris sollicitudin aliquam scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec et mi sem. Duis tristique elementum tristique. Sed ac magna quis erat sagittis suscipit. Phasellus faucibus rhoncus</p>
                 </article>
             </article>
             <article class="right">
                 <article>
-                    <img src="img/rightblock.png" alt="">
-
+                    <span class="blocktriangle"><span>+</span></span>
+                    <img src="img/rightblock.png" alt="ss">
+                    <h1>Nice Looking Mountains Ah?</h1>
+                    <p>
+                            Quisque accumsan eleifend dolor, nec bibendum nibh ultricies at. 
+                            Nunc convallis risus sit amet augue bibendum non lobortis eros interdum. 
+                            Maecenas quis risus felis, at volutpat elit. 
+                            Proin vel nisl in orci venenatis suscipit eget sed lectus. 
+                    </p>
                 </article>
                 <article class="right_text">
+                    <h1>Housework can't kill you, but why take a chance?</h1>
+                    <p>
+                        Quisque accumsan eleifend dolor, nec bibendum nibh ultricies at. 
+                        Nunc convallis risus sit amet augue bibendum non lobortis eros interdum...
+                    </p>
+                    <span>13th January 2013</span>
                 </article>
                 <hr>
                 <article class="right_text">
+                        <h1>My fake plants died because I did not pretend to water them.</h1>
+                        <p>
+                            Quisque accumsan eleifend dolor, nec bibendum nibh ultricies at. 
+                            Nunc convallis risus sit amet augue bibendum non lobortis eros interdum...
+                        </p>
+                        <span>13th January 2013</span>
                 </article>
-                <a href="" class="right_menu">Sanyochek </a>
-                <a href="" class="right_menu">Sanyochek </a>
-                <a href="" class="right_menu">Sanyochek </a>
-                <a href="" class="right_menu">Sanyochek </a>
+                <a href="" class="right_menu">About Us </a>
+                <a href="" class="right_menu">How to </a>
+                <a href="" class="right_menu">Write for us </a>
+                <a href="" class="right_menu">Video Testmonials </a>
             </article>
         </section>
     </main>
+    <footer>
+        <div>
+            <div class="navfooter">
+                <a href="">About Us</a>
+                <a href="">Footer Links</a>
+                <a href="">Privacy</a>
+                <a href="">Page Links Also</a>
+            </div>
+            <p>
+                    As cross as a hoon my built like a op shop. 
+                    We're going bored sh*tless heaps she'll be right budgie smugglers. 
+                    Grab us a durry mate she'll be right dunny rat. She'll be right larrikin with skite. 
+                    As stands out like kero it'll be truckie.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
